src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>EMOps</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ITS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SSR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_History__c</fullName>
        <description>For Academic Appeals cases.</description>
        <inlineHelpText>Brief summary of relevant features of the student’s academic performance: credits attempted and earned, G.P.A., failed courses, etc. Synthesis of what the committee needs to know to evaluate the case</inlineHelpText>
        <label>Academic History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Division__c</fullName>
        <description>This relationship is too far away to add to a report type, so we need this field to pull it onto reports.</description>
        <formula>Program__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Program Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>The action you for this user record.</description>
        <inlineHelpText>Please select the action you&apos;d like to take.</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_to_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add this to the application?</inlineHelpText>
        <label>Add to Application?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Major_Name__c</fullName>
        <label>Additional Major Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Major__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Major?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_Status__c</fullName>
        <formula>Related_Opportunity__r.Status_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Request_Type__c</fullName>
        <inlineHelpText>Please select the application request type.</inlineHelpText>
        <label>Application Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Owner change</fullName>
                </value>
                <value>
                    <fullName>Catalog/School Change</fullName>
                </value>
                <value>
                    <fullName>Create Ed History</fullName>
                </value>
                <value>
                    <fullName>Late Add</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Program Change</fullName>
                </value>
                <value>
                    <fullName>Student Type Change</fullName>
                </value>
                <value>
                    <fullName>Term Change</fullName>
                </value>
                <value>
                    <fullName>Transcript Eval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <formula>TEXT(  Related_Opportunity__r.School_College__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please enter the application type.</inlineHelpText>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Description__c</fullName>
        <label>Approval Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Petition_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No refund</fullName>
                </value>
                <value>
                    <fullName>Issue grace grant for full tuition</fullName>
                </value>
                <value>
                    <fullName>Issue grace grant for partial tuition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_SSR_Advising__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in a workflow to assign Cases to a queue when generated with a button</description>
        <label>Assign: SSR Advising</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCA_Username__c</fullName>
        <description>New user&apos;s Bethel Username</description>
        <inlineHelpText>What&apos;s the new user&apos;s Bethel username?</inlineHelpText>
        <label>BCA Username</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSSD_Transition_Plan__c</fullName>
        <description>For closure of BSSD</description>
        <label>BSSD Transition Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - No Response</fullName>
                </value>
                <value>
                    <fullName>Complete at Bethel</fullName>
                </value>
                <value>
                    <fullName>Inactive - No Response</fullName>
                </value>
                <value>
                    <fullName>Inactive - Not Returning</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaigns_to_Exclude__c</fullName>
        <description>Campaigns to exclude from a segment/mailing list request</description>
        <inlineHelpText>list of campaign IDs to exclude</inlineHelpText>
        <label>Campaigns to Exclude</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Age_Business_Days__c</fullName>
        <description>Used in SSR Reports and Dashboards</description>
        <formula>Case_Age_Business_Hours__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age - Business Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_Business_Hours__c</fullName>
        <description>Used in SSR Reports and Dashboards</description>
        <formula>max( 0, 


( 

if( text(Status) = &quot;Closed&quot;, 



((ClosedDate - CreatedDate) * 24) 

- 

( (datevalue(ClosedDate) - datevalue(CreatedDate)) * 12 ) 

- 

( FLOOR((datevalue(ClosedDate) - datevalue(CreatedDate) ) / 7) * 24 ) 

- 

(if(((MOD( datevalue(ClosedDate) - DATE(1900, 1, 6), 7)) - mod((datevalue(ClosedDate) - datevalue(CreatedDate)), 7)) &lt; 2, 24, 0)) 

, 

((now() - CreatedDate) * 24) 

- 

( (today() - datevalue(CreatedDate)) * 12 ) 

- 

( FLOOR((today() - datevalue(CreatedDate) ) / 7) * 24 ) 

- 

(if(((MOD( today() - DATE(1900, 1, 6), 7)) - mod((today() - datevalue(CreatedDate)), 7)) &lt; 2, 24, 0)) 

) 

) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age - Business Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ceremony_Date__c</fullName>
        <label>Ceremony Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall 2019</fullName>
                </value>
                <value>
                    <fullName>Spring 2020</fullName>
                </value>
                <value>
                    <fullName>Fall 2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceremony_Participation__c</fullName>
        <label>Ceremony Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I will commence in absentia. I understand this means my name will be listed in the program but I will not be present at commencement</fullName>
                    <label>In absentia</label>
                </value>
                <value>
                    <fullName>I plan to commence in person.</fullName>
                    <label>In person</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Items__c</fullName>
        <inlineHelpText>Please enter the checklist items</inlineHelpText>
        <label>Checklist Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Replacement__c</fullName>
        <inlineHelpText>Please enter the code replacement</inlineHelpText>
        <label>Code Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Counselor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the counselor.</inlineHelpText>
        <label>Counselor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Number__c</fullName>
        <label>Course Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Formatted__c</fullName>
        <description>A better representation of CreatedDate, need a formula to easily show on the VisualForce page for Appeals cases.</description>
        <formula>LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)   + &quot;-&quot; +
LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)     + &quot;-&quot; +
TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_Party__c</fullName>
        <description>The type of person or committee that the Case was reviewed by.</description>
        <formula>CASE( 
Petition_Type__c, 

&quot;Exception - Late Add&quot;, &quot;Program Director&quot;, 
&quot;Exception - Complete degree requirements from prior catalog year&quot;, &quot;Program Director&quot;, 
&quot;Exception - Extension of time on credit expiration&quot;, &quot;Program Director&quot;, 
&quot;Exception - Extension of time to complete degree&quot;, &quot;Dean&quot;, 
&quot;Exception - Grade Change&quot;, &quot;Dean&quot;, 
&quot;Exception - Late drop with refund request&quot;, &quot;Dean&quot;, 
&quot;Exception - Late drop without refund request&quot;, &quot;Program Director&quot;, 
&quot;Exception - Residency requirement&quot;, &quot;Program Director&quot;, 
&quot;Exception - Required course or independent study substitution&quot;, &quot;Program Director&quot;, 
&quot;Exception - Withdrawal past deadline with refund request&quot;, &quot;Dean&quot;, 
&quot;Exception - Withdrawal past deadline without refund request&quot;, &quot;Program Director&quot;, 
&quot;Exception - Other academic policy&quot;, &quot;Dean&quot;, 
&quot;Appeal - Academic Dismissal&quot;, &quot;Appeals Committee&quot;, 
&quot;Appeal - Co-curricular Dismissal&quot;, &quot;Appeals Committee&quot;, 
&quot;Appeal - Exception Request&quot;, &quot;Appeals Committee&quot;, 

&quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deciding Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Name__c</fullName>
        <label>Decision Maker Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_URL__c</fullName>
        <formula>$Setup.Bethel_Settings__c.Public_Domain_URL__c + &quot;appeals/apex/AcademicPetitionDecisionForm?ID=&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_about_refund__c</fullName>
        <description>Reasons for approving a Late Drop/Withdrawal Petition Type</description>
        <inlineHelpText>Reasons for approving a Late Drop/Withdrawal Petition Type</inlineHelpText>
        <label>Decision about refund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No refund</fullName>
                </value>
                <value>
                    <fullName>Issue grace grant for full tuition</fullName>
                </value>
                <value>
                    <fullName>Issue grace grant for partial tuition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denial_Description__c</fullName>
        <description>Details on why an appeal was denied.</description>
        <inlineHelpText>Details on why an appeal was denied.</inlineHelpText>
        <label>Denial Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Petition_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Student was granted a prior extension and did not complete the degree requirements</fullName>
                </value>
                <value>
                    <fullName>Substitute course has different objectives than the course in our catalog</fullName>
                </value>
                <value>
                    <fullName>Substitute course was at a lower level than course in our catalog</fullName>
                </value>
                <value>
                    <fullName>Substitute course did not include important content provided in course that we provide</fullName>
                </value>
                <value>
                    <fullName>No room in class</fullName>
                </value>
                <value>
                    <fullName>Pace of class too intense to allow reasonable time to get work done</fullName>
                </value>
                <value>
                    <fullName>Other sections available</fullName>
                </value>
                <value>
                    <fullName>Student not yet qualified to be in class</fullName>
                </value>
                <value>
                    <fullName>Student participated in the class fully and no drop or withdrawal is justified</fullName>
                </value>
                <value>
                    <fullName>The changes to the curriculum are significant enough that the student would not be well served by completing old requirements</fullName>
                </value>
                <value>
                    <fullName>The courses are not available and suitable replacements cannot be identified</fullName>
                </value>
                <value>
                    <fullName>Student did not provide evidence or report circumstances sufficient to justify an exception to the policy</fullName>
                </value>
                <value>
                    <fullName>Student was granted a prior extension and did not complete the class</fullName>
                </value>
                <value>
                    <fullName>Student did not provide enough information about the course to justify a favorable decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Rank__c</fullName>
        <description>The rank the department feels this request is.</description>
        <inlineHelpText>Please enter the rank number of this case.</inlineHelpText>
        <label>Department Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>The Department the User that submitted this request belongs to</description>
        <formula>IF( NOT(ISBLANK( Submitted_By__c )), 
 Submitted_By__r.Department,null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_circumstances__c</fullName>
        <label>Details of circumstances</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dissertation_Title__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Dissertation Title (GS)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>International Document</fullName>
                </value>
                <value>
                    <fullName>Interview Notes</fullName>
                </value>
                <value>
                    <fullName>Personal Statement</fullName>
                </value>
                <value>
                    <fullName>Professional License</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
                <value>
                    <fullName>Resume</fullName>
                </value>
                <value>
                    <fullName>Statement of Purpose</fullName>
                </value>
                <value>
                    <fullName>Test Score</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emphasis_Concentration__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Emphasis/Concentration (MDiv)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_Affecting_Multiple__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox stating whether an ITS - Issue is affecting multiple people.</description>
        <inlineHelpText>Are multiple people are affected by this issue?</inlineHelpText>
        <label>Affecting Multiple People</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Changes__c</fullName>
        <inlineHelpText>Please enter the form changes.</inlineHelpText>
        <label>Form Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Groups_to_Include__c</fullName>
        <label>Groups to Include</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>PSEO</fullName>
                </value>
                <value>
                    <fullName>Previous PSEO (Q)</fullName>
                </value>
                <value>
                    <fullName>Readmits</fullName>
                </value>
                <value>
                    <fullName>Specials</fullName>
                </value>
                <value>
                    <fullName>BUILD</fullName>
                </value>
                <value>
                    <fullName>Campaign Members</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hometown__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Hometown (Seminary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_appealing_the_following__c</fullName>
        <description>Populated from a field on the Appeals Wufoo form.</description>
        <label>I am appealing the following:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>I_am_requesting_the_following__c</fullName>
        <description>Populated from Academic Appeals Wufoo form.</description>
        <label>I am requesting the following</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_terms__c</fullName>
        <description>Populated from a field on the Appeals Wufoo form.</description>
        <label>If yes, how many terms?</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_International_Students__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include International Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Input_from_party__c</fullName>
        <formula>CASE( 
Petition_Type__c, 

&quot;Exception - Late Add&quot;, &quot;Course Instructor&quot;, 
&quot;Exception - Complete degree requirements from prior catalog year&quot;, &quot;Registrar; Student Success Advisor&quot;, 
&quot;Exception - Extension of time on credit expiration&quot;, &quot;Registrar&quot;, 
&quot;Exception - Extension of time to complete degree&quot;, &quot;Program Director&quot;, 
&quot;Exception - Grade Change&quot;, &quot;Course Instructor; Program Director&quot;, 
&quot;Exception - Late drop with refund request&quot;, &quot;Course Instructor; Program Director&quot;, 
&quot;Exception - Late drop without refund request&quot;, &quot;Course Instructor&quot;, 
&quot;Exception - Residency requirement&quot;, &quot;Student Success Advisor&quot;, 
&quot;Exception - Required course or independent study substitution&quot;, &quot;Student Success Advisor&quot;, 
&quot;Exception - Withdrawal past deadline with refund request&quot;, &quot;Course Instructor; Program Director&quot;, 
&quot;Exception - Withdrawal past deadline without refund request&quot;, &quot;Course Instructor&quot;, 
&quot;Exception - Other academic policy&quot;, &quot;Varies based on request&quot;, 
&quot;Appeal - Academic Dismissal&quot;, &quot;Varies based on appeal&quot;, 
&quot;Appeal - Co-curricular Dismissal&quot;, &quot;Varies based on appeal&quot;, 
&quot;Appeal - Exception Request&quot;, &quot;Varies based on appeal&quot;, 

&quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Input from party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inputs_perspective__c</fullName>
        <description>Field for Academic Petitions.</description>
        <inlineHelpText>Briefly summarize feedback received from input providers listed above</inlineHelpText>
        <label>Input Provider&apos;s Perspective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <description>Populated from a field on the Appeals Wufoo form.</description>
        <label>Instructor</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Language (Seminary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Sent_to_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Sent to Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Date__c</fullName>
        <label>List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Populated from the Commencement Application Wufoo form.</description>
        <inlineHelpText>Asked for Seminary Commencement Applications</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Admission_Status__c</fullName>
        <label>New Admission Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquired</fullName>
                </value>
                <value>
                    <fullName>App Started</fullName>
                </value>
                <value>
                    <fullName>App Submitted</fullName>
                </value>
                <value>
                    <fullName>App Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Pre-Applied</fullName>
                </value>
                <value>
                    <fullName>Wait Listed</fullName>
                </value>
                <value>
                    <fullName>Fee Paid</fullName>
                </value>
                <value>
                    <fullName>Fee Waived</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Lead - File Closed</fullName>
                </value>
                <value>
                    <fullName>Inquired - File Closed</fullName>
                </value>
                <value>
                    <fullName>Pre-Applied - File Closed</fullName>
                </value>
                <value>
                    <fullName>App Started - File Closed</fullName>
                </value>
                <value>
                    <fullName>App Submitted - File Closed</fullName>
                </value>
                <value>
                    <fullName>App Completed - File Closed</fullName>
                </value>
                <value>
                    <fullName>Wait Listed - FIle Closed</fullName>
                </value>
                <value>
                    <fullName>Accepted - File Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected - App Submitted - File Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected - App Completed - File Closed</fullName>
                </value>
                <value>
                    <fullName>Fee Paid - File Closed</fullName>
                </value>
                <value>
                    <fullName>Fee Waived - File Closed</fullName>
                </value>
                <value>
                    <fullName>Registered - File Closed</fullName>
                </value>
                <value>
                    <fullName>Confirmed - Ready to Enroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Application_Program_Name__c</fullName>
        <inlineHelpText>Please enter the new application program name.</inlineHelpText>
        <label>New Application Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Program_Code_in_Banner__c</fullName>
        <description>Please enter the new program code in banner.</description>
        <label>New Program Code in Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Program to be added to the Opportunity and Application</description>
        <inlineHelpText>New Program for the Opportunity and Application</inlineHelpText>
        <label>New Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Program is not active.</errorMessage>
            <filterItems>
                <field>Program__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases (New Program)</relationshipLabel>
        <relationshipName>CasesNewProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Term__c</fullName>
        <description>Term new program should start to be used</description>
        <inlineHelpText>Term new program should start to be used</inlineHelpText>
        <label>New Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Name__c</fullName>
        <description>The name of the new user.</description>
        <inlineHelpText>Please enter the name of the new user.</inlineHelpText>
        <label>New User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Org_Link__c</fullName>
        <formula>IF(
				NOT(ISBLANK(Previous_Id__c)),
    &quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Id__c,
				&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Degrees__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Other Degrees (Seminary/EdD)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <description>Comments field displayed when Approval and Denial fields are set to &apos;Other&apos;, or Petition Type is Appeal, when Decision is Deny.</description>
        <inlineHelpText>Comments field from Formbuilder</inlineHelpText>
        <label>Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>